content and minor changes

--- a/templates/Predict.html
+++ b/templates/Predict.html
@@ -43,7 +43,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-  <title>Get Prediction - Nama Aplikasi</title>
+  <title>Get Prediction - Diabetic Retinopathy</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -71,7 +71,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="{{ url_for('home') }}">Nama Aplikasi</a></h1>
+        <h1 class="text-light"><a href="{{ url_for('home') }}"></a></h1>
       </div>
 
       <nav class="nav-menu d-none d-lg-block">
