--- a/templates/info.html
+++ b/templates/info.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Info - Nama Aplikasi</title>
+  <title>Info - Diabetic Retinopathy</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -34,7 +34,7 @@
     <div class="container d-flex align-items-center">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="{{ url_for('home') }}">Nama Aplikasi</a></h1>
+        <h1 class="text-light"><a href="{{ url_for('home') }}"></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
